--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "project for hackathon Hackbenchers #4.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node server"
   },
   "repository": {
     "type": "git",
