--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "require": "^2.4.20"
   },
   "devDependencies": {},
   "scripts": {
